# dkls23-rs-mpc-signer

./: .gitignore  Cargo.toml  README.md
crates/dkls-party/: Cargo.toml
crates/dkls-party/src/: main.rs
crates/dkls23-core/: Cargo.toml
crates/dkls23-core/src/: error.rs  lib.rs  types.rs
crates/dkls23-core/src/keygen/: dkg.rs  key_refresh.rs  messages.rs  mod.rs
crates/dkls23-core/src/mpc/: memory.rs  mod.rs
crates/dkls23-core/src/oblivious/: endemic_ot.rs  mod.rs  soft_spoken.rs
crates/dkls23-core/src/sign/: dsg.rs  messages.rs  mod.rs
crates/msg-relay/: Cargo.toml
crates/msg-relay-client/: Cargo.toml
crates/msg-relay-client/src/: lib.rs
crates/msg-relay-svc/: Cargo.toml
crates/msg-relay-svc/src/: main.rs
crates/msg-relay/src/: lib.rs
docs/: architecture.md  protocol.md
scripts/: dkg.sh  dsg.sh  run-relay.sh
