[package]
name = "dkls23-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core cryptographic primitives for DKLs23 threshold ECDSA"

[features]
default = ["multi-thread"]
multi-thread = ["tokio/rt-multi-thread", "rayon"]

[dependencies]
# Cryptographic primitives
k256.workspace = true
elliptic-curve.workspace = true
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true
hmac.workspace = true
aead.workspace = true
chacha20poly1305.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
merlin.workspace = true
subtle.workspace = true
zeroize.workspace = true

# Encoding
hex.workspace = true
serde_json.workspace = true

# BIP32
derivation-path.workspace = true
tiny-keccak.workspace = true
ripemd.workspace = true
digest.workspace = true

# Async
tokio.workspace = true
futures-util.workspace = true

# Parallelism
rayon = { workspace = true, optional = true }

# Randomness
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Async
async-trait.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
