[package]
name = "msg-relay-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Client library for message relay service"

[dependencies]
dkls23-core = { path = "../dkls23-core" }
msg-relay = { path = "../msg-relay" }

tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.11", features = ["json"] }
base64.workspace = true
hex.workspace = true
