[package]
name = "msg-relay-svc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Message relay HTTP/WebSocket service for MPC"

[[bin]]
name = "msg-relay-svc"
path = "src/main.rs"

[dependencies]
msg-relay = { path = "../msg-relay" }

tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
base64.workspace = true
