[package]
name = "msg-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Message relay library for MPC communication"

[dependencies]
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
blake3.workspace = true
